antlr4-test/src/main/java/com/warningrc/test/antlr4/script/CouponParser.java
// Generated from com\warningrc\test\antlr4\script\Coupon.g4 by ANTLR 4.5.1
package com.warningrc.test.antlr4.script;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CouponParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		OR=10, AND=11, STRING=12, NUMBER=13, WS=14;
	public static final int
		RULE_build = 0, RULE_matchOrder1 = 1, RULE_matchOrder = 2, RULE_rangeType = 3, 
		RULE_productLines = 4, RULE_productTypes = 5;
	public static final String[] ruleNames = {
		"build", "matchOrder1", "matchOrder", "rangeType", "productLines", "productTypes"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "','", "'\"rangeType\"'", "':'", "'\"productLines\"'", 
		"'['", "']'", "'\"productTypes\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "OR", "AND", 
		"STRING", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Coupon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CouponParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BuildContext extends ParserRuleContext {
		public MatchOrder1Context matchOrder1() {
			return getRuleContext(MatchOrder1Context.class,0);
		}
		public BuildContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterBuild(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitBuild(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitBuild(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BuildContext build() throws RecognitionException {
		BuildContext _localctx = new BuildContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_build);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			matchOrder1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchOrder1Context extends ParserRuleContext {
		public MatchOrderContext matchOrder() {
			return getRuleContext(MatchOrderContext.class,0);
		}
		public MatchOrder1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchOrder1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterMatchOrder1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitMatchOrder1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitMatchOrder1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchOrder1Context matchOrder1() throws RecognitionException {
		MatchOrder1Context _localctx = new MatchOrder1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_matchOrder1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			match(T__0);
			setState(15);
			matchOrder();
			setState(16);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchOrderContext extends ParserRuleContext {
		public RangeTypeContext rangeType() {
			return getRuleContext(RangeTypeContext.class,0);
		}
		public ProductLinesContext productLines() {
			return getRuleContext(ProductLinesContext.class,0);
		}
		public ProductTypesContext productTypes() {
			return getRuleContext(ProductTypesContext.class,0);
		}
		public MatchOrderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchOrder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterMatchOrder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitMatchOrder(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitMatchOrder(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchOrderContext matchOrder() throws RecognitionException {
		MatchOrderContext _localctx = new MatchOrderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matchOrder);
		try {
			setState(61);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				rangeType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(20);
				rangeType();
				setState(21);
				match(T__2);
				setState(22);
				productLines();
				setState(23);
				match(T__2);
				setState(24);
				productTypes();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(27);
				rangeType();
				setState(28);
				match(T__2);
				setState(29);
				productTypes();
				setState(30);
				match(T__2);
				setState(31);
				productLines();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(34);
				productLines();
				setState(35);
				match(T__2);
				setState(36);
				rangeType();
				setState(37);
				match(T__2);
				setState(38);
				productTypes();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(41);
				productLines();
				setState(42);
				match(T__2);
				setState(43);
				productTypes();
				setState(44);
				match(T__2);
				setState(45);
				rangeType();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(48);
				productTypes();
				setState(49);
				match(T__2);
				setState(50);
				rangeType();
				setState(51);
				match(T__2);
				setState(52);
				productLines();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(55);
				productTypes();
				setState(56);
				match(T__2);
				setState(57);
				productLines();
				setState(58);
				match(T__2);
				setState(59);
				rangeType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeTypeContext extends ParserRuleContext {
		public RangeTypeContext rangeType() {
			return getRuleContext(RangeTypeContext.class,0);
		}
		public RangeTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterRangeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitRangeType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitRangeType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RangeTypeContext rangeType() throws RecognitionException {
		RangeTypeContext _localctx = new RangeTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rangeType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__3);
			setState(64);
			match(T__4);
			setState(65);
			rangeType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductLinesContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CouponParser.STRING, 0); }
		public ProductLinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productLines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterProductLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitProductLines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitProductLines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductLinesContext productLines() throws RecognitionException {
		ProductLinesContext _localctx = new ProductLinesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_productLines);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__5);
			setState(68);
			match(T__4);
			setState(69);
			match(T__6);
			setState(71);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(70);
				match(STRING);
				}
			}

			setState(73);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductTypesContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CouponParser.STRING, 0); }
		public ProductTypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productTypes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).enterProductTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CouponListener ) ((CouponListener)listener).exitProductTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CouponVisitor ) return ((CouponVisitor<? extends T>)visitor).visitProductTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductTypesContext productTypes() throws RecognitionException {
		ProductTypesContext _localctx = new ProductTypesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_productTypes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__8);
			setState(76);
			match(T__4);
			setState(77);
			match(T__6);
			setState(79);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(78);
				match(STRING);
				}
			}

			setState(81);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}